--- a/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
+++ b/rhoso-intro/1/ch3-multitenancy/s1-domains-projects-lecture.html
@@ -276,7 +276,7 @@ Work in Progress
 <p>The structure of domains and projects also enable OpenStack services to enforce API resource and compute resource quotas, which prevents a single application to take up all compute capacity of a cluster or of a compute node.</p>
 </div>
 <div class="paragraph">
-<p>Notice that, unlike operating system file quotas, which assign capacity to users and groups, OpenStack quotas assign capacity to applications, by means of their projects. If a user has access to multiple project, they can create resources which consume all aggregate compute capacity from all those projects.</p>
+<p>Notice that, unlike operating system file quotas, which assign capacity to users and groups, OpenStack quotas assign capacity to applications, by means of their projects. If a user has access to multiple projects, they can create resources which consume quota from all those projects.</p>
 </div>
 </div>
 </div>
@@ -284,7 +284,7 @@ Work in Progress
 <h2 id="_openstack_domains_and_projects"><a class="anchor" href="#_openstack_domains_and_projects"></a>OpenStack Domains and Projects</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>An OpenStack domain is the top-level container for projects, users, groups, and roles. Some of these resources can exist at the project level, meaning they have only access to the resources of the project, but they usually exist at the domain level so they can access resources from different projects on the same domain.</p>
+<p>An OpenStack domain is the top-level container for projects, users, groups, and roles. Users, groups, and roles can also exist at the project level, meaning they have only access to the resources of the project, but they usually exist at the domain level so they can access resources from different projects on the same domain.</p>
 </div>
 <div class="paragraph">
 <p>OpenStack allows users and groups from one domain to access resources from projects in other domains, which enables an approach of creating two parallel sets of domains:</p>
@@ -303,7 +303,7 @@ Work in Progress
 <p>This approach enables you to manage your organizational chart independently of your applications. It also enables managing scenarios such as bringing together two originally independent organizations, like two companies that merged. Each organization can be a distinct domain, and each domain can have its own authentication settings, possibly using different external identity services.</p>
 </div>
 <div class="paragraph">
-<p>Most OpenStack API resources have to exist inside a project, and some API resource types  can be shared, meaning they could be referenced by resource instances from different projects. This enables some Operators to manage resources for usage by different projects and teams, for example standard server boot images.</p>
+<p>Most OpenStack API resources have to exist inside a project, and some API resource types  can be shared, meaning they could be referenced by resource instances from different projects. This enables some Operators to manage resources for usage by different projects and teams, for example standard server boot images, by creating projects dedicated to host those shared resources.</p>
 </div>
 <div class="paragraph">
 <p>OpenStack projects can be hierarchical: a project can have subprojects. Access permissions and resource quotas can be inherited (or not) from parent to child project, which enables large teams some degree of self-management.</p>
@@ -317,7 +317,10 @@ Work in Progress
 <p>OpenStack API resources are uniquely identified by an UUID assigned by its service. All OpenStack API calls which create new resource instances return the UUID of the new resource, and this is the only guaranteed way of referencing the resource later on. While you can change the name of a resource, you cannot change its UUID.</p>
 </div>
 <div class="paragraph">
-<p>Most OpenStack client commands will accept names of resources and retrieve their UUIDs at the specified current project and domain scopes, but if they cannot you are expected to retry the command providing the UUIDs of API resources you need. When one API resoruce references other API resources, it is always by UUID, never by name. This means API resource names could change at any time.</p>
+<p>Most OpenStack client commands will accept names of resources and retrieve their UUIDs from the specified project and domain scopes, but if they cannot, you are expected to retry the command providing the UUIDs of API resources you need.</p>
+</div>
+<div class="paragraph">
+<p>When one API resource references other API resources, it is always by UUID, never by name. This means API resource names could change at any time.</p>
 </div>
 <div class="paragraph">
 <p>Some OpenStack API resources also accept zero or more tags, which you use for arbitrary grouping of resources. OpenStack services do not give any meaning to tags, but they help Operators manage clusters with a large number of resources.</p>
@@ -348,7 +351,7 @@ Work in Progress
 </ul>
 </div>
 <div class="paragraph">
-<p>To understand the difference between admin and member roles, consider the conflicting needs of granting some authonomy to OpenStack Operators, while denying them the ability to perform dangerous operations. For example, a user might have permission to create server instances and networks inside a project, but the same user cannot change resource quotas on that project, no grant access to resources to other users.</p>
+<p>To understand the difference between admin and member roles, consider the conflicting needs of granting some authonomy to OpenStack Operators, while denying them the ability to perform dangerous operations. For example, a user might have permission to create server instances and networks inside a project, but the same user cannot change resource quotas on that project, nor grant access to resources to other users.</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -357,13 +360,13 @@ Work in Progress
 <i class="fa icon-tip" title="Tip"></i>
 </td>
 <td class="content">
-Remember no user or group owns OpenStack API resources. Servers, networks, volumes, and other API resources belong to projects and domains only.
+Remember that users do <strong>not</strong> own OpenStack API resources. Servers, networks, volumes, and other API resources belong to projects and domains only.
 </td>
 </tr>
 </table>
 </div>
 <div class="paragraph">
-<p>The admin, member, and reader roles exist by convention: it is up to individual OpenStack services to assign specifc meaning to each of those roles, that is: which APIs they can invoke and using which parameters. For some services, the distinction between admin and member might make no sense and those roles would be equivalent. For other services, the reader role might not view some attributes of a resource instance.</p>
+<p>The admin, member, and reader roles exist by convention. It is up to individual OpenStack services to assign specifc meaning to each of those roles, that is: which APIs they can invoke and using which parameters. For some services, the distinction between admin and member might make no sense and those roles would be equivalent. For other services, the reader role may not be able to view sensitive attributes of a resource instance.</p>
 </div>
 <div class="paragraph">
 <p>It is possible, but uncommon, to create custom roles in OpenStack clusters. The reason being that you cannot define the permissions (or rules) for custom roles using OpenStack APIs. You would have to manage services directly on the control plane to provide them with policy files. Most organizations stay within the three standard roles.</p>
@@ -381,10 +384,10 @@ Remember no user or group owns OpenStack API resources. Servers, networks, volum
 <p>One Keystone domain can refer to only one authentication backend. This is a reason some organizations create user domains and resource domains: so they can create multiple user domains, each referring to a different identity system.</p>
 </div>
 <div class="paragraph">
-<p>Traditional datacenters may be used to the LDAP technology, popular with identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard.</p>
+<p>Traditional data centers may be used to the LDAP technology, used by identity management systems like Microsoft Active Directory (MSAD) and Red Hat Enterprise Linux Identity Management (RHEL IdM) but this technology is losing ground for identity management systems compatible with OpenID Connect (OIDC), which are based on the OAuth standard.</p>
 </div>
 <div class="paragraph">
-<p>It is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because populst operating systems cannot authenticate users using OIDC, but most of the times there are not reason to make OpenStack compute nodes themselves members of an MSAD or RHEL IdM authetication domain.</p>
+<p>It is advisable to prefer OIDC identity systems over LDAP systems, especially for sharing authentication backends with modern cloud-native and containerized IT infrastructure applications, such as CI/CD systems. Some organizations stick with LDAP systems because popular server and workstation operating systems cannot authenticate users directly using OIDC, but most of the times there is not reason to make OpenStack compute nodes themselves members of an MSAD or RHEL IdM authetication domain.</p>
 </div>
 </div>
 <div class="sect2">
@@ -393,7 +396,7 @@ Remember no user or group owns OpenStack API resources. Servers, networks, volum
 <p>Keystone and some other OpenStack services recognize the system scope meaning an entire cluster. OpenStack APIs which operate at the system scope, outside of any domain and project, are very rare, but granting a user or group with the admin role at the system scope is an effective way of making them superusers for the totality of a cluster.</p>
 </div>
 <div class="paragraph">
-<p>For some services there may be a special project and/or a special domain, repopulared with shared resources, and with admin or member restricted to only few users and reader assigned by default to all users. This looks like system scope but it is only a domain and project reserved for OpenStack Administrators to share reosurces with other users and projects. Organizations can use a similar approach for avoiding duplicating resources on multiple projects and domains.</p>
+<p>For some services there may be a special project and/or a special domain, prepopulared with shared resources, and with admin or member restricted to only few users, plus reader assigned by default to all users. This looks like system scope but it is only a domain and project reserved for OpenStack Administrators to share reosurces with other users and projects. Organizations can use a similar approach for avoiding duplicating resources on multiple projects and domains.</p>
 </div>
 </div>
 </div>
@@ -424,6 +427,17 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 <div class="paragraph">
 <p>Compute resource quotas can only prevent the creation or changes to API resource instances. They are not designed to enforce dynamic usage quotas, but to ensure applications get some guaranteed capacity and that compute nodes are not overloaded with more server instances they can handle.</p>
 </div>
+<div class="paragraph">
+<p>To understand that, assume that a project has a quota of only 10 vCPUs. If that project already has three server instances, which add up to 8 vCPUs, it is only possible to create two new server instances, each one using one vCPU, or one instance using two vCPUs. It doesn&#8217;t matter if the existing instances are mostly iddle and the cluster has plenty if capacity for running more virtual machines.</p>
+</div>
+<div class="sect2">
+<h3 id="_api_resource_quotas_and_compute_resource_quotas"><a class="anchor" href="#_api_resource_quotas_and_compute_resource_quotas"></a>API Resource Quotas and Compute Resource Quotas</h3>
+<div class="paragraph">
+<p>API resource quotas affect the number of instances you can create, of a given API resource type, inside a project. That class of quota limts the number of server instances, floating ips, virtual networks, volumes, and so on.</p>
+</div>
+<div class="paragraph">
+<p>Compute resource quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consuption from all server instances in the project. That class of quota limits total quantity of vCPUs, total memory aggregated from all server instances, total disk space from all volumes, and so on.</p>
+</div>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -431,21 +445,10 @@ OpenStack Nova used to provide per-user quotas but they are deprecated and are n
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Here "compute" means anything required to run application, and could includes storage and network capacity. It does not reffer to API resources from Nova.
+Here "compute" means anything required to running applications, and could include storage and network capacity. It does not reffer to API resources from Nova, the Compute service.
 </td>
 </tr>
 </table>
-</div>
-<div class="paragraph">
-<p>To understand that, assume that a project has a quota of only 10 vCPUs. If that project already has three server instances, which add up to 8 vCPUs, it is only possible to create two new server instances, each one using one vCPU, or one instance using two vCPUs. It doesn&#8217;t matter if the existing instances are mostly iddle and the cluster has plenty if capacity for running more virtual machines.</p>
-</div>
-<div class="sect2">
-<h3 id="_api_resource_quotas_and_compute_resource_quotas"><a class="anchor" href="#_api_resource_quotas_and_compute_resource_quotas"></a>API Resource Quotas and Compute Resource Quotas</h3>
-<div class="paragraph">
-<p>Some quotas affect the number of instances you can create, of a given API resource type, inside a project. That class of quota limts the number of server instances, floating ips, virtual networks, volumes, and so on.</p>
-</div>
-<div class="paragraph">
-<p>Other quotas affect the quantity, or capacity, of a compute resource that a project can consume, aggregating the consuption from all server instances in the project. That class of quota limits total quantity of vCPUs, total memory aggregated from all server instances, total disk space from all volumes, and so on.</p>
 </div>
 </div>
 <div class="sect2">
@@ -457,7 +460,7 @@ Here "compute" means anything required to run application, and could includes st
 <p>Object storage accounts enable external applications to save and retrieve objects without directly authenticating to Keystone. They can represent individual users of Swift object storage instead of individual applications.</p>
 </div>
 <div class="paragraph">
-<p>Object storage quotas limit the number of containers or buckets, tne number of objects, and the total space occupied by aggregating all objects owned by the account.</p>
+<p>Object storage quotas limit the number of containers or buckets, the number of objects, and the total space occupied by aggregating all objects owned by the account.</p>
 </div>
 </div>
 <div class="sect2">
